Adjust the wrap issue

--- a/avery-dennison/src/style.css
+++ b/avery-dennison/src/style.css
@@ -389,7 +389,7 @@ select {
     display: flex;
     gap: 40px;
     width: 10rem;
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap;
 }
 
 .gd_cnt_sub1 p {
